--- a/index.html
+++ b/index.html
@@ -104,23 +104,25 @@
       background: linear-gradient(to bottom, rgba(34, 197, 94, 0), rgba(34, 197, 94, 0) 50%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.2));
       background-size: 100% 3px;
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      pointer-events: none;
-      z-index: 50;
-      opacity: 0.15;
-    }
-
-    /* Opaque Text Utilities */
-    .text-opaque-high {
-      color: rgba(220, 252, 231, 0.95);
-      text-shadow: 0 0 10px rgba(34, 197, 94, 0.3);
-    }
-
-    .text-opaque-med {
-      color: rgba(220, 252, 231, 0.75);
+      body {
+        /* Use project background image if present, otherwise layered metal texture */
+        background-color: #0b0b0b;
+        background-image:
+          url('/metal-bg.jpg'),
+          radial-gradient(circle at 12% 18%, rgba(139,69,19,0.08), transparent 8%),
+          radial-gradient(circle at 84% 72%, rgba(139,69,19,0.06), transparent 12%),
+          linear-gradient(180deg, #141414 0%, #070707 100%),
+          repeating-linear-gradient(135deg, rgba(255,255,255,0.02) 0 1px, transparent 1px 6px),
+          linear-gradient(90deg, rgba(255,255,255,0.02), rgba(0,0,0,0.02));
+        background-size: cover, cover, cover, cover, 6px 6px, cover;
+        background-position: center center, center center, center center, center center, 0 0, center center;
+        background-attachment: fixed, fixed, fixed, fixed, fixed, fixed;
+        background-blend-mode: normal, overlay, overlay, normal, normal, normal;
+        color: #dcfce7;
+        min-height: 100vh;
+        position: relative;
+        overflow-x: hidden;
+      }
     }
 
     .text-opaque-low {
